# brando-ci

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: rust-build.yml  rust-check.yml  rust.yml
src/: main.rs
