[package]
name = "brando-ci"
version = "0.1.0"
authors = ["delbertbeta <delbertbeta@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"
